# mindspark

./: .gitignore  README.md  desktop_bridge.d.ts  index.html  mindspark_lite.css  script.js
MindSpark.app/Contents/: Info.plist
MindSpark.app/Contents/MacOS/: mindspark-launcher
desktop-dist/: desktop_bridge.js  index.html  mindspark_lite.css  script.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: mindspark.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs
