[package]
name = "mindspark-desktop"
version = "0.1.0"
description = "MindSpark desktop backend"
authors = ["Codex"]
edition = "2021"

[lib]
name = "mindspark_desktop_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
